lab1/formaGeo/erro.txt
FormaGeo.java:13: error: constructor Quadrado in class Quadrado cannot be applied to given types;
	public Retangulo(double pl1,double pl2) {
	                                        ^
  required: double,double
  found: no arguments
  reason: actual and formal argument lists differ in length
2 errors
